--- a/sections/head/markup.html
+++ b/sections/head/markup.html
@@ -8,24 +8,25 @@
     <script src="assets/lib/smart-table/Smart-Table.debug.js"></script>
     <script src="assets/js/app.js"></script>
     <link rel="stylesheet" href="assets/css/mainStyle.css"/>
-    <link rel="stylesheet" href="assets/css/bootstrap.css"/>
+    <!--<link rel="stylesheet" href="assets/css/bootstrap.css"/>-->
     <link rel="stylesheet" href="assets/lib/prism/prism.css"/>
 </head>
 <body ng-controller="mainCtrl">
 <header>
     <h1 class="banner">Smart Table</h1>
-    <a class="btn" href="https://github.com/lorenzofox3/Smart-Table"><i class="icon-download-alt"></i>Code on github</a>
-    <ul class="menu">
-        <li><a href="#section-basics" class="btn">The basics</a></li>
-        <li><a href="#section-format" class="btn">Format data</a></li>
-        <li><a href="#section-sort" class="btn">Sort data</a></li>
-        <li><a href="#section-filter" class="btn">Filter data</a></li>
-        <li><a href="#section-selection" class="btn">Select row(s)</a></li>
-        <li><a href="#section-edit" class="btn">Edit cell(s)</a></li>
-        <li><a href="#section-style" class="btn">Simple style</a></li>
-        <li><a href="#section-cellTemplate" class="btn">Cell template</a></li>
-        <li><a href="#section-pagination" class="btn">Pagination</a></li>
-        <li><a href="#section-config" class="btn">Summary</a></li>
-    </ul>
+    <a class="git btn" href="https://github.com/lorenzofox3/Smart-Table"><i class="icon-white icon-download-alt"></i>Code on github</a>
+    <nav class="menu" scroll-treshold="100"><ul>
+        <li><a href="#section-intro">Introduction</a></li>
+        <li><a href="#section-basics">The basics</a></li>
+        <li><a href="#section-format">Format data</a></li>
+        <li><a href="#section-sort">Sort data</a></li>
+        <li><a href="#section-filter">Filter data</a></li>
+        <li><a href="#section-selection">Select row(s)</a></li>
+        <li><a href="#section-edit">Edit cell(s)</a></li>
+        <li><a href="#section-style">Simple style</a></li>
+        <li><a href="#section-cellTemplate">Cell template</a></li>
+        <li><a href="#section-pagination">Pagination</a></li>
+        <li><a href="#section-config">Summary</a></li>
+    </ul></nav>
 </header>
 <div class="main">
