--- a/sections/filter/markup.html
+++ b/sections/filter/markup.html
@@ -1,8 +1,9 @@
 <section id="section-filter" ng-controller="filterCtrl">
     <h2>Search/filter data</h2>
+    <a class="btn doc" href="#"><i class="icon icon-edit"></i></a><span class="bubble">improve the documentation</span>
     <p>The <a href="#">table controller API</a> gives you a way to filter the data comparing an input to both a given column values or in the whole table.
         To display an input textbox for a global search (in the whole table) you just have to set the <em>isGlobalSearchActivated</em> property to true in the table global config object. The algorithm used
-        will be the one used bye the <a href="http://docs.angularjs.org/api/ng.filter:filter">filter</a> filter from Angular. Of course, if you want to use your own, you can specify it in the global config (see below)
+        will be the one used by the <a href="http://docs.angularjs.org/api/ng.filter:filter">filter</a> filter from Angular. Of course, if you want to use your own, you can specify it in the global config (see below)
     </p>
     <tabs>
         <pane heading="JavaScript">
@@ -35,7 +36,7 @@
     <div class="table-container">
         <smart-table class="table table-striped" config="globalConfig" columns="columnCollection" rows="rowCollection"></smart-table>
     </div>
-    <h4>Use your own algorithm</h4>
+    <h3>Use your own algorithm</h3>
     <p>In the same way than for the sort operation you can use you own algorithm, you just have to specify the function you want to use in the global config
         under the property <em>filterAlgorithm</em></p>
 <pre><code class="language-javascript">function customFilter(arrayRef, expression) {
