--- a/sections/style/markup.html
+++ b/sections/style/markup.html
@@ -1,5 +1,6 @@
 <section id="section-style" ng-controller="styleCtrl">
     <h2>Simple styling</h2>
+    <a class="btn doc" href="#"><i class="icon icon-edit"></i></a><span class="bubble">improve the documentation</span>
     <p>This allows you to add a class name for the cells in a given column, and for the header as well. You'll have to specify the
         <em>headerClass</em> and <em>cellClass</em> property in the column configuration</p>
     <tabs>
