--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 
     <p>Although smart-table is from far the best table module for angular :D, there are other table modules in the
-        angular ecosystem you might be interested in. The approach and philosophy are different and maybe more appropriate to you way of building web application. Among the most popular:</p>
+        angular ecosystem you might be interested in. The approach and philosophy are different and maybe more appropriate to your way of building web application. Among the most popular:</p>
     <ul>
         <li><a href="#">ng-grid</a></li>
         <li><a href="#">ng-table</a></li>
