--- a/sections/edit/markup.html
+++ b/sections/edit/markup.html
@@ -1,6 +1,6 @@
 <section id="section-edit" ng-controller="editCtrl">
     <h2>Edit cell</h2>
-    <a class="btn doc" href="#"><i class="icon icon-edit"></i></a><span class="bubble">improve the documentation</span>
+    <a class="btn doc" href="https://github.com/lorenzofox3/smart-table-website/tree/gh-pages/sections/edit"><i class="icon icon-edit"></i></a><span class="bubble">improve the documentation</span>
     <p>You can make the cells of a given column editable by simply setting the <em>isEditable</em> property to true in this column config. This will allow
         you to edit directly the property on the data model object. Therefore, you may want to specify which type of input the cell will accept. You just
         have to set the <em>type</em> property to the the type you want (email, number, etc). If the input is valid the model is updated, otherwise it will keep
