--- a/sections/format/markup.html
+++ b/sections/format/markup.html
@@ -1,6 +1,6 @@
 <section id="section-format" ng-controller="formatCtrl">
     <h2>Format data</h2>
-    <a class="btn doc" href="#"><i class="icon icon-edit"></i></a><span class="bubble">improve the documentation</span>
+    <a class="btn doc" href="https://github.com/lorenzofox3/smart-table-website/tree/gh-pages/sections/format"><i class="icon icon-edit"></i></a><span class="bubble">improve the documentation</span>
     <p>
         In our previous examples the data were displayed as raw strings,but what if we want to format date, currency and so on in a proper way ?
         In the column configuration, you can specify how to format the data for the given column by adding <em>formatFunction</em> and <em>formatParameter</em>
