--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@ scope.formatedValue;//the formated value (not the raw string)</code></pre>
 &lt;/div></code></pre>
         </pane>
         <pane heading="custom.html">
-            <pre ng-non-bindable><code class="language-markup">&lt;custom>&lt;/cutsom></code></pre>
+            <pre ng-non-bindable><code class="language-markup">&lt;custom>&lt;/custom></code></pre>
         </pane>
         <pane heading="custom.js">
                 <pre><code class="language-javascript">app.directive('custom', function () {
