--- a/sections/Introduction/markup.html
+++ b/sections/Introduction/markup.html
@@ -1,6 +1,6 @@
 <section id="section-intro" ng-controller="paginationCtrl">
     <h2>Introduction</h2>
-    <a class="btn doc" href="#"><i class="icon icon-edit"></i></a><span class="bubble">improve the documentation</span>
+    <a class="btn doc" href="https://github.com/lorenzofox3/smart-table-website/tree/gh-pages/sections/introduction"><i class="icon icon-edit"></i></a><span class="bubble">improve the documentation</span>
 
     <p><strong>Smart table</strong> is an <a href="#">Angularjs</a> module to easily display data in a table with a set
         of built in functionalities such filetering,
@@ -17,23 +17,19 @@
             easy to get into the source code to modify/customise the module to best fit your needs.
             You will find for example:
             <ul>
-                <li>on the <a href="#">different branches</a> of the project some custom implementation to turn
+                <li>on the <a href="https://github.com/lorenzofox3/Smart-Table/tree/server-sample">different branches</a> of the project some custom implementation to turn
                     smart-table into a server driven table while changing less than 10 lines
                 </li>
 
-                <li>on <a href="#">plunker</a>(here made by "bob") some custom implementation with richer
+                <li>on <a href="http://plnkr.co/edit/xsJs8m?p=preview">plunker</a>(here made by Jiri Kavulak) some custom implementation with richer
                     functionalities
                 </li>
             </ul>
     </ul>
-
-
     <p>Although smart-table is from far the best table module for angular :D, there are other table modules in the
-        angular ecosystem you might be interested in. The approach and philosophy are different and maybe more appropriate to you way of building web application. Among the most popular:</p>
+        angular ecosystem you might be interested in. The approach and philosophy are different and maybe more appropriate to your way of building web application. Among the most popular:</p>
     <ul>
-        <li><a href="#">ng-grid</a></li>
-        <li><a href="#">ng-table</a></li>
+        <li><a href="http://angular-ui.github.io/ng-grid/">ng-grid</a></li>
+        <li><a href="http://esvit.github.io/ng-table/#!/">ng-table</a></li>
     </ul>
-
-
 </section>
