--- a/sections/edit/markup.html
+++ b/sections/edit/markup.html
@@ -22,7 +22,7 @@
     ];
 
     //every time a data row is updated
-    scope.$on('udpateDataRow', function (event, arg) {
+    scope.$on('updateDataRow', function (event, arg) {
         console.log(arg);
     });
 
