--- a/index.html
+++ b/index.html
@@ -279,6 +279,25 @@
     &lt;smart-table config="globalConfig" columns="columnCollection" rows="rowCollection">&lt;/smart-table>
 &lt;/div></code></pre>
         </pane>
+        <pane heading="customHeader.html" >
+                <pre ng-non-bindable class="language-markup"><code>&lt;span>{{column.label}}&lt;/span>
+&lt;input class="column-filter" type="text" ng-model="searchValue" /></code></pre>
+        </pane>
+        <pane heading="customHeader.js" >
+<pre class="language-javascript"><code>app.directive('columnFilter', function () {
+    return {
+        restrict: 'C',
+        require: '^smartTable',
+        link: function (scope, element, attrs, ctrl) {
+            scope.searchValue = '';
+            scope.$watch('searchValue', function (value) {
+                ctrl.search(value, scope.column);
+            })
+        }
+    }
+});</code></pre>
+        </pane>
+        
     </tabs>
     <div class="table-container">
         <smart-table class="table table-striped" config="globalConfig" columns="columnCollection" rows="rowCollection"></smart-table>
@@ -529,52 +548,7 @@ scope.formatedValue;//the formated value (not the raw string)</code></pre>
         <li ng-repeat="row in rowCollection">{{ row | json}}</li>
     </ul>
     <p>In the same way you can assign a custom template to the column header thanks to the column property <em>headerTemplateUrl</em>. See the source code
-        of the previous filter section as an example.</p>
-    <tabs>
-        <pane heading="JavaScript">
-                <pre class="language-javascript"><code>app.controller('filterCtrl', ['$scope', function (scope) {
-    scope.rowCollection = [
-        {firstName: 'Laurent', lastName: 'Renard', birthDate: new Date('1987-05-21'), balance: 102, email: 'whatever@gmail.com'},
-        {firstName: 'Blandine', lastName: 'Faivre', birthDate: new Date('1987-04-25'), balance: -2323.22, email: 'oufblandou@gmail.com'},
-        {firstName: 'Francoise', lastName: 'Frere', birthDate: new Date('1955-08-27'), balance: 42343, email: 'raymondef@gmail.com'}
-    ];
-
-    scope.columnCollection = [
-        {label: 'First Name', map: 'firstName'},
-        {label: 'Last Name', map: 'lastName', formatFunction: 'uppercase', headerTemplateUrl: 'assets/template/customHeader.html'},
-        {label: 'Birth Date', map: 'birthDate', formatFunction: 'date'},
-        {label: 'Balance', map: 'balance', formatFunction: 'currency', formatParameter: '$'},
-        {label: 'e-mail', map: 'email'}
-    ];
-    scope.globalConfig = {
-        isGlobalSearchActivated: true
-    };
-}]);</code></pre>
-        </pane>
-        <pane heading="markup" >
-<pre ng-non-bindable class="language-markup"><code>&lt;div ng-controller="filterCtrl">
-    &lt;smart-table config="globalConfig" columns="columnCollection" rows="rowCollection">&lt;/smart-table>
-&lt;/div></code></pre>
-        </pane>
-        <pane heading="customHeader.html" >
-                <pre ng-non-bindable class="language-markup"><code>&lt;span>{{column.label}}&lt;/span>
-&lt;input class="column-filter" type="text" ng-model="searchValue" /></code></pre>
-        </pane>
-        <pane heading="customHeader.js" >
-<pre class="language-javascript"><code>app.directive('columnFilter', function () {
-    return {
-        restrict: 'C',
-        require: '^smartTable',
-        link: function (scope, element, attrs, ctrl) {
-            scope.searchValue = '';
-            scope.$watch('searchValue', function (value) {
-                ctrl.search(value, scope.column);
-            })
-        }
-    }
-});</code></pre>
-        </pane>
-    </tabs>
+        of the <a href="#section-filter">previous filter section</a> as an example.</p>
 </section>
 
 <section id="section-pagination" ng-controller="paginationCtrl">
