--- a/sections/cellTemplate/markup.html
+++ b/sections/cellTemplate/markup.html
@@ -5,7 +5,7 @@
         this is useful not only for styling purpose but also if you want to enhance the behavior of the cell. The template will be compiled so that if it contains
         directives they will be considered as angular directives. Moreover, these directives can have access to all the row and column data through the scope
     </p>
-        <pre ><code class="language-javascript">scope.column;//the column ojbect
+        <pre ><code class="language-javascript">scope.column;//the column object
 scope.dataRow;//the data row object
 scope.formatedValue;//the formated value (not the raw string)</code></pre>
     <ul class="note"><li>You can use the table controller api in your directive</li>
