revert wrong modif

--- a/sections/basics/markup.html
+++ b/sections/basics/markup.html
@@ -2,7 +2,7 @@
     <h2>The basics</h2>
     <a class="btn doc" href="https://github.com/lorenzofox3/smart-table-website/tree/gh-pages/sections/basics"><i class="icon icon-edit"></i></a><span class="bubble">improve the documentation</span>
     <p>
-        If you want to display data in a table it is really easy. You simply have to add the <em>smartTable.table</em> directive
+        If you want to display data in a table it is really easy. You simply have to add the <em>smart-table</em> tag
         into your markup (it is an element directive) and bind the <em>rows</em> (see markup tab) attribute
         to an array somewhere in the scope. In our example we specify the data used to fill the table in a
         controller.
