--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
         <li><a href="http://angular-ui.github.io/ng-grid/">ng-grid</a></li>
         <li><a href="http://esvit.github.io/ng-table/#!/">ng-table</a></li>
     </ul>
+
+    <p>If you want to play around, try this <a href="http://plnkr.co/edit/8Qectt?p=preview">plunker</a></p>
 </section>
 <section id="section-basics" ng-controller="basicsCtrl">
     <h2>The basics</h2>
