--- a/sections/Introduction/markup.html
+++ b/sections/Introduction/markup.html
@@ -32,4 +32,6 @@
         <li><a href="http://angular-ui.github.io/ng-grid/">ng-grid</a></li>
         <li><a href="http://esvit.github.io/ng-table/#!/">ng-table</a></li>
     </ul>
+
+    <p>If you want to play around, try this <a href="http://plnkr.co/edit/8Qectt?p=preview">plunker</a></p>
 </section>
